<resources>
    <string name="app_name" translatable="false">Playlist Maker</string>
    <string name="search">Поиск</string>
    <string name="library">Медиатека</string>
    <string name="settings">Настройки</string>
    <string name="dark_theme">Тёмная тема</string>
    <string name="share">Поделиться приложением</string>
    <string name="support">Написать в поддержку</string>
    <string name="user_agreement">Пользовательское соглашение</string>
    <string name="share_url" translatable="false">https://practicum.yandex.ru/android-developer/</string>
    <string name="send_mail_address" translatable="false">shirkan@yandex.ru</string>
    <string name="send_mail_subject">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="send_mail_text">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="user_agreement_offer" translatable="false">https://yandex.ru/legal/practicum_offer/</string>
    <string name="search_nothing_found">Ничего не нашлось</string>
    <string name="search_no_internet">Проблемы со связью\n\nЗагрузка не удалась. Проверьте подключение к интернету</string>
    <string name="search_retry">Обновить</string>
    <string name="search_history">Вы искали</string>
    <string name="clear_history">Очистить историю</string>
    <string name="track_start_time" translatable="false">00:00</string>
    <string name="track_time">Длительность</string>
    <string name="album">Альбом</string>
    <string name="year">Год</string>
    <string name="genre">Жанр</string>
    <string name="country">Страна</string>
    <string name="track_unavailable">Воспроизведение трека недоступно</string>
    <string name="server_error">Ошибка сервера</string>
    <string name="favorites">Избранные треки</string>
    <string name="playlists">Плейлисты</string>
    <string name="library_empty">Ваша медиатека пуста</string>
    <string name="no_playlists">Вы не создали\nни одного плейлиста</string>
    <string name="new_playlist">Новый плейлист</string>
    <string name="playlist_name">Название*</string>
    <string name="playlist_description">Описание</string>
    <string name="playlist_create">Создать</string>
    <string name="playlist_dialog_title">Завершить создание плейлиста?</string>
    <string name="playlist_dialog_message">Все несохранённые данные будут потеряны</string>
    <string name="playlist_dialog_finish">Завершить</string>
    <string name="playlist_dialog_cancel">Отмена</string>
    <string name="playlist_finished">Плейлист %1$s создан</string>
    <string name="number_of_tracks_placeholder">777 треков</string>
    <plurals name="numberOfTracks">
        <item quantity="one">%d трек</item>
        <item quantity="few">%d трека</item>
        <item quantity="other">%d треков</item>
    </plurals>
    <string name="add_to_playlist">Добавить в плейлист</string>
    <string name="add_to_playlist_success">Трек добавлен в плейлист</string>
    <string name="add_to_playlist_exists">Трек уже есть в этом плейлисте</string>
    <string name="permission_dialog_title">Доступ к изображениям</string>
    <string name="permission_dialog_message">Вы можете предоставить разрешение в настройках</string>
    <string name="permission_dialog_settings">Настройки</string>
    <plurals name="playlistDuration">
        <item quantity="one">%d минута</item>
        <item quantity="few">%d минуты</item>
        <item quantity="other">%d минут</item>
    </plurals>
    <string name="track_remove_confirmation">Хотите удалить трек?</string>
    <string name="remove_accept">Да</string>
    <string name="remove_reject">Нет</string>
    <string name="playlist_share_no_tracks">В этом плейлисте нет списка треков, которым можно поделиться</string>
    <string name="context_menu_share">Поделиться</string>
    <string name="context_menu_edit">Редактировать информацию</string>
    <string name="context_menu_delete">Удалить плейлист</string>
    <string name="playlist_remove_confirmation">Хотите удалить плейлист «%s»?</string>
    <string name="playlist_remove_complete">Плейлист «%s» удалён</string>
    <string name="playlist_edit_save">Сохранить</string>
    <string name="playlist_no_tracks">В этом плейлисте нет треков</string>
    <string name="internet_connection_lost">Отсутствует подключение к интернету</string>
    <string name="no_player_permission">Без разрешения на отправку уведомлений возможны проблемы при воспроизведении</string>
    <string name="player_service_description">Музыкальный сервис</string>
</resources>